--- a/style.css
+++ b/style.css
@@ -29,6 +29,26 @@ html{
 section{
     padding: 2rem 9%;
 }
+section:nth-child(even){
+
+    background: #f5f5f5;
+}
+
+.heading{
+    text-align: center;
+    padding-bottom: 2rem;
+    text-shadow: var(--text-shadow);
+    text-transform: uppercase;
+    color: var(--black);
+    font-size: 5rem;
+    letter-spacing: .4rem;
+}
+.heading span{
+    text-transform: uppercase;
+    color: var(--green);
+
+}
+
 .btn{
     display: inline-block;
     margin-top: 1rem;
@@ -39,7 +59,7 @@ section{
     box-shadow:var(--box-shadow);
     color:var(--green);
     cursor: pointer;
-    font-size: 1.7 rem;
+    font-size: 1.7rem;
 }
 
 .btn span{
@@ -119,6 +139,9 @@ section{
         padding: 2rem;
 
     }
+    section{
+        padding: 2rem;
+    }
 
 @media (max-width:768px){
     #menu-btn{
@@ -161,14 +184,17 @@ section{
 .home{
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     gap:1.5rem;
     padding-top: 10rem;
+    justify-content: space-between;
 }
 
 
 .home .image{
     flex: 1 1 45rem;
+    min-width: 30rem;
+   
 }
 
 .home .image img{
@@ -176,20 +202,183 @@ section{
 }
 
 .home .content{
-    flex: 1 1 45rem;
+    flex: 1 1 30rem;
+    min-width: 10rem;
+   
 }
 
 
 .home .content h3{
-    font-size: 4.5rem;
+    font-size: 4rem;
     color:var(--black);
-    line-height: 1.8;
+    line-height: 1.2;
     text-shadow: var(--text-shadow);
 }
 
 .home .content p{
-     font-size: 1.7rem;
+     font-size: 1.6rem;
      color: var(--light-color);
-     line-height: 1.8;
+     line-height: 1.5;
      padding: 1rem 0;
+}
+
+
+.icons-container{
+    display: grid;
+    gap:2rem;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+
+}
+.icons-container .icons{
+
+    border:var(--border);
+    box-shadow: var(--box-shadow);
+    border-radius: .5rem;
+    text-align: center;
+    padding: 2.5rem;
+}
+
+.icons-container .icons i{
+    font-size: 4.5rem;
+    color: var(--green);
+    padding-bottom: .7rem;
+}
+
+.icons-container .icons h3{
+    font-size: 4.5rem;
+    color: var(--black);
+    padding: .5rem 0;
+    text-shadow: var(--text-shadow);
+}
+
+.icons-container .icons p{
+    font-size: 1.7rem;
+    color: var(--light-color);
+}
+
+.services .box-container{
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+    gap:2rem;
+}
+.services .box-container .box{
+
+    background:#fff;
+    border-radius: .5rem;
+    box-shadow: var(--box-shadowb);
+    border:var(--border);
+    padding: 2.5rem;
+}
+.services .box-container .box i{
+    color: var(--green);
+    font-size: 5rem;
+    padding-bottom: .5rem;
+}
+
+.services .box-container .box h3{
+    color: var(--black);
+    font-size: 2.5rem;
+    padding: 1rem 0;
+}
+.services .box-container .box p{
+    color: var(--light-color);
+    font-size: 1.4rem;
+    line-height: 2;
+}
+.about .row{
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    gap:2rem;
+    justify-content: space-between;
+}
+.about .row .image{
+    flex:1 1 45rem;
+    min-width: 30rem;
+}
+.about .row .image img{
+    width: 100%;
+}
+
+.about .row .content{
+    flex:1 1 45rem;
+    min-width: 10rem;
+}
+.about .row .content h3{
+
+    color: var(--black);
+    text-shadow: var(--text-shadow);
+    font-size: 4rem;
+    line-height: 1.2;
+}
+
+.about .row .content p{
+
+    color: var(--light-color);
+    padding:0.2rem 0;
+    font-size: 1.6rem;
+    line-height: 1.3;
+}
+
+
+.doctors .box-container{
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+    gap:2rem;
+}
+.doctors .box-container .box{
+    text-align: center;
+    background: #fff;
+    border-radius: .5rem;
+    border: var(--border);
+    box-shadow: var(--box-shadow);
+    padding:2rem;
+
+
+}
+.doctors .box-container .box img{
+
+    height: 20rem;
+    border: var(--border);
+    border-radius: .5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+
+}
+.doctors .box-container .box h3{
+
+    color: var(--black);
+    font-size: 2.5rem;
+}
+
+.doctors .box-container .box span{
+
+    color: var(--green);
+    font-size: 1.5rem;
+}
+.doctors .box-container .share {
+    padding-top: 2rem;
+
+}
+.doctors .box-container .share a{
+
+    height: 5rem;
+    width: 5rem;
+    line-height: 4.5rem;
+    font-size: 2rem;
+    color: var(--green);
+    border-radius: .5rem;
+    border: var(--border);
+    margin:.3rem;
+
+}
+.doctors .box-container .box .share a:hover{
+
+    background: var(--green);
+    color: #fff;
+    box-shadow: var(--box-shadow);
 }
