--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ section:nth-child(even){
     color:var(--green);
     cursor: pointer;
     font-size: 1.7rem;
+    background-color: #ffffff;
 }
 
 .btn span{
@@ -381,4 +382,82 @@ section:nth-child(even){
     background: var(--green);
     color: #fff;
     box-shadow: var(--box-shadow);
+}
+.book .row{
+
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    gap: 2rem;
+
+}
+.book .row .image{
+    flex : 1 1 45rem ;
+}
+.book .row .image img{
+    width: 100%;
+}
+.book .row form{
+    flex: 1 1 45rem;
+    background: #fff;
+    border: var(--border);
+    box-shadow: var(--box-shadow);
+    text-align: center;
+    padding: 2rem;
+    border-radius: .5rem;
+}
+.book .row form h3{
+    color: var(--black);
+    padding-bottom: 1rem;
+    font-size: 3rem;
+}
+.book .row form .box{
+    width: 100%;
+    margin: .7rem 0;
+    border-radius: .5rem;
+    border: var(--border);
+    font-size: 1.6rem;
+    color: var(--black);
+    text-transform: none;
+    padding-left:.5rem  ;
+
+}
+.book .row form .btn{
+padding: 1rem 4rem;
+}
+
+.review .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+    gap:1rem;
+}
+.review .box-container .box{
+border:var(--border);
+box-shadow: var(--box-shadow);
+border-radius: .5rem;
+padding: 2.5rem;
+background-color: #fff;
+text-align: center;
+position: relative;
+overflow: hidden;
+z-index: 0;
+}
+.review .box-container .box img{
+    height: 10rem;
+    width: 10rem;
+    border-radius: 50% ;
+    object-fit: cover;
+    border: .5rem solid #ffffff;
+
+}
+.review .box-container .box h3{
+    color: #fff;
+    font-size: 2.2rem;
+    padding: .5rem 0;
+
+}
+.review .box-container .box .stars i{
+    color: #fff;
+    font-size: 1.5rem;
+    padding-top: 4rem;
 }
