--- a/style.css
+++ b/style.css
@@ -478,4 +478,47 @@ height: 25rem;
 width: 120%;
 z-index: -1;
 }
+.blog .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+    gap:1rem;
+}
+.blog .box-container .box{
+    border: var(--border);
+    box-shadow: var(--box-shadow);
+    border-radius: .5rem;
+    padding: 2rem;
 
+}
+.blog .box-container .box .image{
+ height: 20rem;
+ overflow: hidden;
+ border-radius: 1rem;
+}
+.blog .box-container .box .image img{
+height:100%;
+width: 100%;
+object-fit: cover;
+
+}
+.blog .box-container .box:hover .image img{
+    transform: scale(1.2);
+}
+
+.blog .box-container .box .content{
+    padding-top: 1rem ;
+}
+.blog .box-container .box .content .icon{
+    padding: 1rem  0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.blog .box-container .box .content .icon a{
+    font-size: 1.4rem;
+    color: var(--green);
+}
+.blog .box-container .box .content .icon a i{
+    padding-right: .5rem;
+    color: var(--green);
+}
