--- a/style.css
+++ b/style.css
@@ -328,7 +328,7 @@ section:nth-child(even){
 .doctors .box-container{
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     gap:2rem;
 }
 .doctors .box-container .box{
@@ -521,4 +521,62 @@ object-fit: cover;
 .blog .box-container .box .content .icon a i{
     padding-right: .5rem;
     color: var(--green);
+}
+
+.blog .box-container .box .content h3{
+    color: var(--black);
+    font-size: 3rem;
+
+}
+.blog .box-container .box .content p{
+
+    color: var(--light-color);
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+}
+.footer .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+    gap:2rem;
+}
+.footer .box-container .box h3{
+    font-size: 2.5rem;
+    color: var(--black);
+    padding: 1rem 0;
+
+
+}
+.footer .box-container .box a{
+    font-size: 1.5rem;
+    color: var(--light-color);
+    padding: 1rem 0;
+    display: block;
+
+}
+.footer .box-container .box a i{
+ 
+    padding-right:  0.5rem;
+    color: var(--green);
+
+}
+.footer .box-container .box a:hover i{
+    padding-right: 2rem;
+
+
+}
+.footer .credit{
+    padding: 1rem;
+    padding-top: 2rem;
+    margin-top: 2rem;
+    text-align: center;
+    font-size: 2rem;
+    color: var(--light-color);
+    border-top: -1rem solid rgba(0, 0, 0, .1);
+
+
+
+}
+.footer .credit span{
+    color: var(--green);
+    
 }
